update dance model
